# gRPC-Go

./: BUILD.bazel  WORKSPACE.bazel  versions.bzl
client/: BUILD.bazel  go.mod  main.go
proto/: go.mod
proto/dummy/v1/: BUILD.bazel  dummy.proto
proto/todo/v1/: BUILD.bazel  todo.proto
server/: BUILD.bazel  db.go  go.mod  impl.go  in_memory.go  main.go  server.go
