load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = [
        "db.go",
        "impl.go",
        "in_memory.go",
        "main.go",
        "server.go",
    ],
    importpath = "github.com/nurovic/gRPC_Go/server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/todo/v1:todo",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
